--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 
     <application android:label="@string/app_name"
-                 android:icon="@drawable/app_icon" android:debuggable="true">
+                 android:icon="@drawable/app_icon_boat" android:debuggable="true">
         <activity android:name=".BluetoothChat"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden">
